--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,34 +1,20 @@
-name: Deploy React App
+name: Deploy React App in a single job
 on: push
 jobs: 
-  test:
+  deploy: 
     runs-on: ubuntu-latest
     steps:
       - name: Gets repository sources
         uses: actions/checkout@v3
+
       - name: Install dependencies
         run: npm ci
+
       - name: Test application
         run: npm run test
-  lint:
-    runs-on: ubuntu-latest
-    needs: test
-    steps:
-      - name: Gets repository sources
-        uses: actions/checkout@v3
-      - name: Install dependencies
-        run: npm ci
+
       - name: Lint application
         run: npm run lint
-  build:
-    runs-on: ubuntu-latest
-    needs: lint
-    steps:
-      - name: Build repository sources
-        uses: actions/checkout@v3
-      - name: Install dependencies
-        run: npm ci
-      - name: Build application
-        run: npm run build
+
       - name: Deploy
         run: echo Deploying…
